@@ -16,6 +16,7 @@ Version 3.1.0 - SVN
  - Move PENALTY_TIME variable out of common-config into domserver-config.
  - Add combined_scoreboard script to view scoreboard of multiple sites.
  - Error out when WEBBASEURI not set.
+ - The judgedaemon now tries to restore a lost db connection (Closes: #2897130)
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
